--- a/tour-of-heroes/src/app/app.component.html
+++ b/tour-of-heroes/src/app/app.component.html
@@ -4,6 +4,12 @@
   <a routerLink='/dashboard'>Dashboard</a>
 
   <a routerLink='/heroes'>Heroes</a>
+
+  <a routerLink="/observables">Observables</a>
+
+  <a routerLink='/cache'>Cache http request</a>
+
+  <a routerLink='/component-comunication'>Component comunication</a>
 </nav>
 
 <router-outlet></router-outlet>
